# cool-ns

./: Cargo.toml
examples/: schema.rs
schema/: config.json  cool_n_s_execute_message.json  cool_n_s_instantiate_message.json  cool_n_s_query_message.json  name_record.json
scripts/: local_deploy.sh  run_local_node.sh
src/: config.rs  contract.rs  execute.rs  lib.rs  message.rs  registry.rs
