[package]
name = "cool-ns"
version = "0.1.0"
# NOTE: As of now 2021 is not supported by cosmwasm/rust-optimizer
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = "1.0.0-beta"
cosmwasm-storage = "1.0.0-beta"
serde = { version = "1.0.133", default-features = false, features = ["derive"] }
anyhow = "1.0.52"
schemars = "0.8.8"
multihash = "0.15.0"

[dev-dependencies]
cosmwasm-vm = "1.0.0-beta"
cosmwasm-schema = "1.0.0-beta"